--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section>
       <h2>Welcome to Tipsy Elves</h2>
       <p>Brighten up every season with our quirky and colorful outfits. From iconic Ugly Christmas Sweaters to everyday fun wear, we have something for everyone.</p>
-      <img src="images/hero.jpg" alt="Group of friends wearing festive outfits from Tipsy Elves">
+      <img src="images/hero.jpeg" alt="Group of friends wearing festive outfits from Tipsy Elves">
     </section>
     <section>
       <h2>Holiday Must-Haves</h2>
