--- a/products.html
+++ b/products.html
@@ -26,12 +26,12 @@
     <section>
       <h2>Holiday & Seasonal</h2>
       <p>From iconic Ugly Christmas Sweaters to spooky Halloween costumes, our seasonal line has something for every celebration.</p>
-      <img src="images/costume.jpg" alt="A fun costume from Tipsy Elves">
+      <img src="images/costume.webp" alt="A fun costume from Tipsy Elves">
     </section>
     <section>
       <h2>Everyday Apparel</h2>
       <p>We bring the party to your wardrobe 365 days a year. Our everyday tees, leggings, and jackets add a punch of personality to any outfit.</p>
-      <img src="images/accessories.jpg" alt="Tipsy Elves accessories on display">
+      <img src="images/accessories.webp" alt="Tipsy Elves accessories on display">
     </section>
   </main>
   <footer>
