--- a/specials.html
+++ b/specials.html
@@ -26,7 +26,7 @@
     <section>
       <h2>Hot Promotions</h2>
       <p>Don't miss our limited-time markdowns on selected items. Quantities are limited, so shop now!</p>
-      <img src="images/sale.jpg" alt="Sale banner showing discounted prices">
+      <img src="images/sale.png" alt="Sale banner showing discounted prices">
     </section>
     <section>
       <h2>Bundle & Save</h2>
