--- a/specials.html
+++ b/specials.html
@@ -1,40 +1,80 @@
+<!--  File: specials.html  |  Site‑wide promotions & limited‑time offers  -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Tipsy Elves | Special Deals</title>
-  <meta name="description" content="Check out special deals and limited-time offers on Tipsy Elves apparel and accessories.">
-  <meta name="keywords" content="Tipsy Elves, deals, promotions, discounts">
-  <link rel="stylesheet" href="css/styles.css">
+  <meta charset="utf-8">
+  <title>Special Deals | Limited‑Time Tipsy Elves Discounts</title>
+  <meta name="description"
+        content="Save big with Tipsy Elves special deals. Limited‑time discounts on ugly Christmas sweaters, Halloween costumes, 4th of July outfits and more.">
+  <meta name="keywords"
+        content="tipsy elves deals, holiday discounts, ugly christmas sweater sale,
+                 halloween costume sale, 4th of july sale, st patricks day sale,
+                 promo codes, sitewide sale">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
-  <header>
-    <h1>Special Deals</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="products.html">Products</a></li>
-        <li><a href="blog.html">Blog</a></li>
+  <header class="site-header">
+    <h1 class="logo"><a href="index.html">Tipsy Elves</a></h1>
+
+    <nav aria-label="Main">
+      <ul class="nav">
+        <li><a href="ugly-christmas-sweaters.html">Ugly X‑mas</a></li>
+        <li><a href="halloween-costumes.html">Halloween</a></li>
+        <li><a href="fourth-of-july.html">4th of July</a></li>
+        <li><a href="st-patricks-day.html">St Patrick’s Day</a></li>
+        <li><a href="custom-apparel.html">Custom Apparel</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="specials.html">Specials</a></li>
       </ul>
     </nav>
   </header>
+
   <main>
-    <section>
-      <h2>Hot Promotions</h2>
-      <p>Don't miss our limited-time markdowns on selected items. Quantities are limited, so shop now!</p>
-      <img src="images/sale.png" alt="Sale banner showing discounted prices">
+    <!-- hero -------------------------------------------------------------->
+    <section class="hero">
+      <img src="images/sitewide_deals_banner.jpg"
+           alt="Tipsy Elves banner announcing site‑wide discounts on seasonal apparel">
+      <h2 class="hero-title">Special Deals</h2>
     </section>
-    <section>
-      <h2>Bundle & Save</h2>
-      <p>Create your own bundles of sweaters, costumes, and accessories to enjoy bigger discounts.</p>
+
+    <!-- Hot promotions ---------------------------------------------------->
+    <section id="promotions">
+      <h2>🔥 Hot Promotions</h2>
+      <ul>
+        <li>🎄 <strong>Ugly Sweater BOGO:</strong> Buy 1, Get 1 50 % Off</li>
+        <li>🎃 <strong>Costume Flash Sale:</strong> Extra 20 % Off Halloween styles</li>
+        <li>🇺🇸 <strong>Patriot Pack:</strong> 30 % Off 4‑item 4th of July bundles</li>
+        <li>☘️ <strong>Lucky Leprechaun Deal:</strong> Free socks on St Paddy’s orders &gt; $60</li>
+      </ul>
+    </section>
+
+    <!-- How to redeem ----------------------------------------------------->
+    <section id="redeem" class="alt">
+      <h2>How to Redeem a Promo Code</h2>
+      <p>Add your favourites to the cart, head to checkout and paste the code into the
+         <em>Promo Code</em> box. Discount applies instantly—no luck required!</p>
+    </section>
+
+    <!-- Tips -------------------------------------------------------------->
+    <section id="tips">
+      <h2>Tips to Never Miss a Deal</h2>
+      <ol>
+        <li>Sign up for our <strong>newsletter</strong>—exclusive codes land first in your inbox.</li>
+        <li>Follow us on <strong>Instagram &amp; TikTok</strong> for 24‑hour flash‑sale alerts.</li>
+        <li>Bookmark this page—deals update every Friday at noon PST.</li>
+      </ol>
+    </section>
+
+    <!-- CTA --------------------------------------------------------------->
+    <section id="shop" class="cta">
+      <h2 class="sr-only">Shop now</h2>
+      <p><a href="ugly-christmas-sweaters.html" class="btn">Back to Shopping&nbsp;→</a></p>
     </section>
   </main>
-  <footer>
-    <p>© 2025 Tipsy Elves</p>
+
+  <footer class="site-footer">
+    <p>&copy; 2025 Tipsy Elves &nbsp;|&nbsp; Happy Shopping!</p>
   </footer>
 </body>
 </html>
