--- a/fourth-of-july.html
+++ b/fourth-of-july.html
@@ -12,6 +12,7 @@
                  fourth of july costume ideas">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="canonical" href="https://sannihithreddy-cyber.github.io/TIPSY-ELVES/fourth-of-july.html">
 </head>
 
 <body>
