--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Tipsy Elves | Fun Holiday &amp; Party Apparel All Year</title>
-
+  <link rel="canonical" href="https://sannihithreddy-cyber.github.io/TIPSY-ELVES/">
   <meta name="description"
         content="Shop Tipsy Elves for funny, bold apparel. From ugly Christmas sweaters to Halloween costumes, 4th of July outfits, St Paddy’s gear and custom designs – we’ve got your party look covered all year.">
 
