--- a/specials.html
+++ b/specials.html
@@ -12,6 +12,7 @@
                  promo codes, sitewide sale">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="canonical" href="https://sannihithreddy-cyber.github.io/TIPSY-ELVES/specials.html">
 </head>
 
 <body>
@@ -25,7 +26,7 @@
         <li><a href="fourth-of-july.html">4th of July</a></li>
         <li><a href="st-patricks-day.html">St Patrick’s Day</a></li>
         <li><a href="custom-apparel.html">Custom Apparel</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        
       </ul>
     </nav>
   </header>
