--- a/ugly-christmas-sweaters.html
+++ b/ugly-christmas-sweaters.html
@@ -12,6 +12,7 @@
                  cheap ugly christmas sweaters, best ugly christmas sweaters">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="canonical" href="https://sannihithreddy-cyber.github.io/TIPSY-ELVES/ugly-christmas-sweaters.html">
 </head>
 
 <body>
