--- a/custom-apparel.html
+++ b/custom-apparel.html
@@ -12,6 +12,8 @@
                  event apparel, branded holiday wear">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="canonical" href="https://sannihithreddy-cyber.github.io/TIPSY-ELVES/custom-apparel.html">
+
 </head>
 
 <body>
