--- a/halloween-costumes.html
+++ b/halloween-costumes.html
@@ -13,6 +13,7 @@
                  what is the most popular halloween costume, best halloween costumes for couples">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="canonical" href="https://sannihithreddy-cyber.github.io/TIPSY-ELVES/halloween-costumes.html">
 </head>
 
 <body>
