--- a/st-patricks-day.html
+++ b/st-patricks-day.html
@@ -11,6 +11,7 @@
                  funny st patricks day costumes, green beer shirt, irish clothing, lucky outfits">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="canonical" href="https://sannihithreddy-cyber.github.io/TIPSY-ELVES/st-patricks-day.html">
 </head>
 
 <body>
