--- a/custom-apparel.html
+++ b/custom-apparel.html
@@ -1,4 +1,4 @@
-<!--  File: custom‑apparel.html  -->
+<!-- File: custom-apparel.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,46 +7,44 @@
   <meta name="description"
         content="Create one‑of‑a‑kind apparel with Tipsy Elves. Personalise sweaters, tees & jumpsuits for team events, holidays and group celebrations. Fast turnaround & bulk discounts.">
   <meta name="keywords"
-        content="custom apparel, personalised sweaters, custom t‑shirts,
+        content="custom apparel, personalised sweaters, custom t-shirts,
                  group shirts, design your own ugly sweater, bulk custom clothing,
                  event apparel, branded holiday wear">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="canonical" href="https://sannihithreddy-cyber.github.io/TIPSY-ELVES/custom-apparel.html">
-
 </head>
 
 <body>
   <header class="site-header">
-    <h1 class="logo"><a href="index.html">Tipsy Elves</a></h1>
+    <div class="logo"><a href="index.html">Tipsy Elves</a></div>
 
     <nav aria-label="Main">
       <ul class="nav">
-        <li><a href="ugly-christmas-sweaters.html">Ugly X‑mas</a></li>
+        <li><a href="ugly-christmas-sweaters.html">Ugly X-mas</a></li>
         <li><a href="halloween-costumes.html">Halloween</a></li>
         <li><a href="fourth-of-july.html">4th of July</a></li>
         <li><a href="st-patricks-day.html">St Patrick’s Day</a></li>
         <li><a href="custom-apparel.html" class="active">Custom Apparel</a></li>
-        
       </ul>
     </nav>
   </header>
 
   <main>
-    <!-- hero -------------------------------------------------------------->
+    <!-- hero -->
     <section class="hero">
       <img src="images/custom_apparel_banner.jpg"
            alt="Tailor and client reviewing a navy blazer and color swatches in a design studio">
       <h2 class="hero-title">Custom Apparel</h2>
     </section>
 
-    <!-- Create something you --------------------------------------------->
+    <!-- Create something you -->
     <section id="create">
       <h2>Create Something Totally You</h2>
-      <p>Turn heads with personalised sweaters, tees and accessories built for your squad. From quirky startup merch to reunion shirts and bachelor‑party jumpsuits, we print it all—fast.</p>
+      <p>Turn heads with personalised sweaters, tees and accessories built for your squad. From quirky startup merch to reunion shirts and bachelor‑party jumpsuits, we print it all — fast.</p>
     </section>
 
-    <!-- Popular options --------------------------------------------------->
+    <!-- Popular options -->
     <section id="options" class="alt">
       <h2>Popular Custom Gear Options</h2>
       <ul>
@@ -56,23 +54,23 @@
       </ul>
     </section>
 
-    <!-- How it works ------------------------------------------------------>
+    <!-- Process -->
     <section id="process">
       <h2>How Our Process Works</h2>
       <ol>
         <li><strong>Upload art</strong> or use our drag‑&‑drop editor.</li>
         <li><strong>Approve mock‑up</strong> sent within 24 hrs.</li>
-        <li><strong>Print & ship</strong>—bulk orders leave our warehouse in as little as 5 days.</li>
+        <li><strong>Print &amp; ship</strong> — bulk orders leave our warehouse in as little as 5 days.</li>
       </ol>
     </section>
 
-    <!-- Why choose us ------------------------------------------------------>
+    <!-- Why choose us -->
     <section id="why" class="alt">
       <h2>Why Choose Tipsy Elves Custom?</h2>
-      <p>Premium fabrics, vivid colours and no‑itch prints set us apart. Bulk discounts kick in at 10 units, and every order gets a dedicated rep—because creating memories should be hassle‑free.</p>
+      <p>Premium fabrics, vivid colours and no‑itch prints set us apart. Bulk discounts kick in at 10 units, and every order gets a dedicated rep — because creating memories should be hassle‑free.</p>
     </section>
 
-    <!-- CTA --------------------------------------------------------------->
+    <!-- CTA -->
     <section id="shop" class="cta">
       <h2 class="sr-only">Start your design</h2>
       <p><a href="specials.html" class="btn">Start Designing&nbsp;→</a></p>
