--- a/fourth-of-july.html
+++ b/fourth-of-july.html
@@ -1,4 +1,4 @@
-<!--  File: fourth‑of‑july.html  -->
+<!-- File: fourth-of-july.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,35 +17,34 @@
 
 <body>
   <header class="site-header">
-    <h1 class="logo"><a href="index.html">Tipsy Elves</a></h1>
+    <div class="logo"><a href="index.html">Tipsy Elves</a></div>
 
     <nav aria-label="Main">
       <ul class="nav">
-        <li><a href="ugly-christmas-sweaters.html">Ugly X‑mas</a></li>
+        <li><a href="ugly-christmas-sweaters.html">Ugly X-mas</a></li>
         <li><a href="halloween-costumes.html">Halloween</a></li>
         <li><a href="fourth-of-july.html" class="active">4th of July</a></li>
         <li><a href="st-patricks-day.html">St Patrick’s Day</a></li>
         <li><a href="custom-apparel.html">Custom Apparel</a></li>
-        
       </ul>
     </nav>
   </header>
 
   <main>
-    <!-- hero -------------------------------------------------------------->
+    <!-- hero -->
     <section class="hero">
       <img src="images/fourth_of_july_banner.jpg"
            alt="Friends wearing red, white and blue outfits watching 4th of July fireworks">
       <h2 class="hero-title">4th of July Outfits</h2>
     </section>
 
-    <!-- Trending looks ---------------------------------------------------->
+    <!-- Trending looks -->
     <section id="trending">
       <h2>Top Trending 4th of July Looks</h2>
       <p>Stars‑and‑stripes jumpsuits, retro USA ski suits (yes, even in July!) and matching 4th of July outfits for couples headline this year’s line‑up. Grab yours before grilling season starts.</p>
     </section>
 
-    <!-- Why we rock ------------------------------------------------------->
+    <!-- Why we rock -->
     <section id="standout" class="alt">
       <h2>Why Our Patriotic Gear Rocks</h2>
       <ul>
@@ -55,19 +54,19 @@
       </ul>
     </section>
 
-    <!-- Summer comfort ---------------------------------------------------->
+    <!-- Comfort -->
     <section id="comfort">
       <h2>Breathable Fabrics for Summer BBQs</h2>
       <p>Lightweight cotton blends and quick‑dry board‑shorts mean you can spike the volleyball or dive for a frisbee without breaking a sweat.</p>
     </section>
 
-    <!-- Customer favourites ---------------------------------------------->
+    <!-- Customer favourites -->
     <section id="favourites" class="alt">
       <h2>Customer Favourites &amp; Firework‑Ready Fits</h2>
       <p>Our “Freedom Romp‑Him”, “Patriotic Fanny Pack” and kids’ “Lil’ Firecracker Tee” top the charts year after year. Check reviews for sizing tips, then spark your style!</p>
     </section>
 
-    <!-- CTA --------------------------------------------------------------->
+    <!-- CTA -->
     <section id="shop" class="cta">
       <h2 class="sr-only">Shop the collection</h2>
       <p><a href="specials.html" class="btn">See Independence Deals&nbsp;→</a></p>
