--- a/halloween-costumes.html
+++ b/halloween-costumes.html
@@ -1,4 +1,4 @@
-<!--  File: halloween‑costumes.html  -->
+<!-- File: halloween-costumes.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,35 +18,34 @@
 
 <body>
   <header class="site-header">
-    <h1 class="logo"><a href="index.html">Tipsy Elves</a></h1>
+    <div class="logo"><a href="index.html">Tipsy Elves</a></div>
 
     <nav aria-label="Main">
       <ul class="nav">
-        <li><a href="ugly-christmas-sweaters.html">Ugly X‑mas</a></li>
+        <li><a href="ugly-christmas-sweaters.html">Ugly X-mas</a></li>
         <li><a href="halloween-costumes.html" class="active">Halloween</a></li>
         <li><a href="fourth-of-july.html">4th of July</a></li>
         <li><a href="st-patricks-day.html">St Patrick’s Day</a></li>
         <li><a href="custom-apparel.html">Custom Apparel</a></li>
-        
       </ul>
     </nav>
   </header>
 
   <main>
-    <!-- hero -------------------------------------------------------------->
+    <!-- hero -->
     <section class="hero">
       <img src="images/halloween_costumes_group_banner.png"
            alt="Group of friends wearing spider-inspired Halloween costumes at a convention">
       <h2 class="hero-title">Halloween Costumes</h2>
     </section>
 
-    <!-- Top Trending ------------------------------------------------------>
+    <!-- Top Trending -->
     <section id="trending">
       <h2>Top Trending Halloween Costumes</h2>
       <p>Classic witches and vampires still rule, but pop‑culture mashups, LED accents and meme‑worthy couples halloween costumes steal the spotlight this year. Scroll for ideas or jump to <a href="#shop">shop now</a>.</p>
     </section>
 
-    <!-- Why ours stand out ------------------------------------------------->
+    <!-- Why ours stand out -->
     <section id="standout" class="alt">
       <h2>Why Our Costumes Stand Out</h2>
       <ul>
@@ -56,19 +55,19 @@
       </ul>
     </section>
 
-    <!-- Affordable & unique ---------------------------------------------->
+    <!-- Affordable -->
     <section id="affordable">
       <h2>Affordable &amp; Unique Costume Options</h2>
-      <p>No need to raid the thrift store. Our quality pieces start under&nbsp;$35, and bundle deals make group themes budget friendly—perfect for <em>best halloween costumes for couples</em> on a dime.</p>
+      <p>No need to raid the thrift store. Our quality pieces start under&nbsp;$35, and bundle deals make group themes budget‑friendly — perfect for <em>best halloween costumes for couples</em> on a dime.</p>
     </section>
 
-    <!-- Customer favourites ---------------------------------------------->
+    <!-- Favourites -->
     <section id="favourites" class="alt">
       <h2>Customer Favourites &amp; Party‑Ready Picks</h2>
-      <p>Our “Glow‑in‑the‑Dark Skeleton”, “Taco Trio”, and “Spirit Halloween‑inspired Ghost” tops the charts. See what 10k+ reviewers love and snag yours before sizes vanish.</p>
+      <p>Our “Glow‑in‑the‑Dark Skeleton”, “Taco Trio”, and “Spirit Halloween‑inspired Ghost” top the charts. See what 10k+ reviewers love and snag yours before sizes vanish.</p>
     </section>
 
-    <!-- CTA --------------------------------------------------------------->
+    <!-- CTA -->
     <section id="shop" class="cta">
       <h2 class="sr-only">Shop the collection</h2>
       <p><a href="specials.html" class="btn">See Spooky Deals&nbsp;→</a></p>
