--- a/index.html
+++ b/index.html
@@ -7,28 +7,24 @@
   <link rel="canonical" href="https://sannihithreddy-cyber.github.io/TIPSY-ELVES/">
   <meta name="description"
         content="Shop Tipsy Elves for funny, bold apparel. From ugly Christmas sweaters to Halloween costumes, 4th of July outfits, St Paddy’s gear and custom designs – we’ve got your party look covered all year.">
-
   <meta name="keywords"
         content="holiday apparel, ugly christmas sweaters, halloween costumes,
                  4th of july outfits, st patricks day clothing, custom apparel, tipsy elves deals">
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/styles.css">
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-WSYYPQ9KYD"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-WSYYPQ9KYD');
-</script>
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-WSYYPQ9KYD"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-WSYYPQ9KYD');
+  </script>
 </head>
 
 <body>
   <header class="site-header">
     <h1 class="logo"><a href="index.html">Tipsy Elves</a></h1>
-
     <nav aria-label="Main">
       <ul class="nav">
         <li><a href="ugly-christmas-sweaters.html">Ugly X‑mas</a></li>
@@ -37,26 +33,25 @@
         <li><a href="st-patricks-day.html">St Patrick’s Day</a></li>
         <li><a href="custom-apparel.html">Custom Apparel</a></li>
         <li><a href="specials.html">Deals</a></li>
-        
       </ul>
     </nav>
   </header>
 
   <main>
-    <!-- hero banner ------------------------------------------------------->
+    <!-- hero banner -->
     <section class="hero">
       <img src="images/hero_banner.jpg"
            alt="Collage of Tipsy Elves holiday outfits: Christmas sweaters, patriotic gear and more">
       <h2 class="hero-title">Party Clothes That Break the Ice</h2>
     </section>
 
-    <!-- quick intro ------------------------------------------------------->
+    <!-- intro -->
     <section>
       <h2>Welcome to the Home of Year‑Round Festive Wear</h2>
       <p>Whatever the celebration—Christmas, Halloween, Independence Day, St Paddy’s or your own custom bash—Tipsy Elves brings outrageous style and quality comfort to every party.</p>
     </section>
 
-    <!-- featured collections --------------------------------------------->
+    <!-- shop by season -->
     <section class="alt">
       <h2>Shop by Season</h2>
       <ul>
@@ -67,13 +62,13 @@
       </ul>
     </section>
 
-    <!-- custom call‑out --------------------------------------------------->
+    <!-- custom call‑out -->
     <section>
       <h2>Need Something Unique?</h2>
       <p>Create one‑of‑a‑kind looks for team events, family reunions or corporate gifts with our <a href="custom-apparel.html">Custom Apparel</a> service. Fast turnaround &amp; bulk discounts included.</p>
     </section>
 
-    <!-- deals CTA --------------------------------------------------------->
+    <!-- deals CTA -->
     <section class="cta">
       <h2 class="sr-only">Special Deals</h2>
       <p><a href="specials.html" class="btn">View Today’s Deals&nbsp;→</a></p>
