--- a/specials.html
+++ b/specials.html
@@ -1,4 +1,4 @@
-<!--  File: specials.html  |  Site‑wide promotions & limited‑time offers  -->
+<!-- File: specials.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,29 +17,28 @@
 
 <body>
   <header class="site-header">
-    <h1 class="logo"><a href="index.html">Tipsy Elves</a></h1>
+    <div class="logo"><a href="index.html">Tipsy Elves</a></div>
 
     <nav aria-label="Main">
       <ul class="nav">
-        <li><a href="ugly-christmas-sweaters.html">Ugly X‑mas</a></li>
+        <li><a href="ugly-christmas-sweaters.html">Ugly X-mas</a></li>
         <li><a href="halloween-costumes.html">Halloween</a></li>
         <li><a href="fourth-of-july.html">4th of July</a></li>
         <li><a href="st-patricks-day.html">St Patrick’s Day</a></li>
         <li><a href="custom-apparel.html">Custom Apparel</a></li>
-        
       </ul>
     </nav>
   </header>
 
   <main>
-    <!-- hero -------------------------------------------------------------->
+    <!-- hero -->
     <section class="hero">
       <img src="images/sitewide_deals_banner.jpg"
            alt="Tipsy Elves banner announcing site‑wide discounts on seasonal apparel">
       <h2 class="hero-title">Special Deals</h2>
     </section>
 
-    <!-- Hot promotions ---------------------------------------------------->
+    <!-- Promotions -->
     <section id="promotions">
       <h2>🔥 Hot Promotions</h2>
       <ul>
@@ -50,24 +49,24 @@
       </ul>
     </section>
 
-    <!-- How to redeem ----------------------------------------------------->
+    <!-- Redeem -->
     <section id="redeem" class="alt">
       <h2>How to Redeem a Promo Code</h2>
       <p>Add your favourites to the cart, head to checkout and paste the code into the
-         <em>Promo Code</em> box. Discount applies instantly—no luck required!</p>
+         <em>Promo Code</em> box. Discount applies instantly — no luck required!</p>
     </section>
 
-    <!-- Tips -------------------------------------------------------------->
+    <!-- Tips -->
     <section id="tips">
       <h2>Tips to Never Miss a Deal</h2>
       <ol>
-        <li>Sign up for our <strong>newsletter</strong>—exclusive codes land first in your inbox.</li>
+        <li>Sign up for our <strong>newsletter</strong> — exclusive codes land first in your inbox.</li>
         <li>Follow us on <strong>Instagram &amp; TikTok</strong> for 24‑hour flash‑sale alerts.</li>
-        <li>Bookmark this page—deals update every Friday at noon PST.</li>
+        <li>Bookmark this page — deals update every Friday at noon PST.</li>
       </ol>
     </section>
 
-    <!-- CTA --------------------------------------------------------------->
+    <!-- CTA -->
     <section id="shop" class="cta">
       <h2 class="sr-only">Shop now</h2>
       <p><a href="ugly-christmas-sweaters.html" class="btn">Back to Shopping&nbsp;→</a></p>
