--- a/ugly-christmas-sweaters.html
+++ b/ugly-christmas-sweaters.html
@@ -1,4 +1,4 @@
-<!--  File: ugly‑christmas‑sweaters.html  -->
+<!-- File: ugly-christmas-sweaters.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,36 +17,34 @@
 
 <body>
   <header class="site-header">
-    <h1 class="logo"><a href="index.html">Tipsy Elves</a></h1>
+    <div class="logo"><a href="index.html">Tipsy Elves</a></div>
 
-    <!-- primary navigation -->
     <nav aria-label="Main">
       <ul class="nav">
-        <li><a href="ugly-christmas-sweaters.html" class="active">Ugly X‑mas</a></li>
+        <li><a href="ugly-christmas-sweaters.html" class="active">Ugly X-mas</a></li>
         <li><a href="halloween-costumes.html">Halloween</a></li>
         <li><a href="fourth-of-july.html">4th of July</a></li>
         <li><a href="st-patricks-day.html">St Patrick’s Day</a></li>
         <li><a href="custom-apparel.html">Custom Apparel</a></li>
-        
       </ul>
     </nav>
   </header>
 
   <main>
-    <!-- hero/banner ------------------------------------------------------->
+    <!-- hero/banner -->
     <section class="hero">
       <img src="images/ugly_christmas_sweater_banner.jpg"
            alt="Family wearing matching Christmas sweaters and smiling in a festive holiday setting">
       <h2 class="hero-title">Ugly Christmas Sweaters</h2>
     </section>
 
-    <!-- Top Trending ------------------------------------------------------>
+    <!-- Top Trending -->
     <section id="trending">
       <h2>Top Trending Ugly Sweater Ideas</h2>
       <p>LED‑lit reindeer, 3‑D pom‑poms &amp; meme‑worthy Santas—our sweaters make instant conversation starters. Browse the latest drops or <a href="#shop">skip to the collection</a> for this year’s must‑have looks.</p>
     </section>
 
-    <!-- Why our sweaters stand out ---------------------------------------->
+    <!-- Why our sweaters stand out -->
     <section id="standout" class="alt">
       <h2>Why Our Sweaters Stand Out</h2>
       <ul>
@@ -56,19 +54,19 @@
       </ul>
     </section>
 
-    <!-- Comfort & style --------------------------------------------------->
+    <!-- Quality -->
     <section id="quality">
       <h2>Quality, Comfort &amp; Festive Style Combined</h2>
       <p>Soft cotton‑blend knits keep you warm while breathable stitching prevents the dreaded party over‑heat. Every design is machine‑washable, so spills from egg‑nog or hot cocoa are no big deal.</p>
     </section>
 
-    <!-- Customer favourites ---------------------------------------------->
+    <!-- Favourites -->
     <section id="favourites" class="alt">
       <h2>Customer Favourites &amp; Party‑Ready Picks</h2>
       <p>From the <em>“Jingle Brew”</em> beer‑pocket sweater to our glow‑in‑the‑dark snowman, these best‑sellers sell out fast. <a href="#shop">Shop now</a> and join 5,000+ five‑star reviewers.</p>
     </section>
 
-    <!-- call‑to‑action / internal link to specials ------------------------>
+    <!-- CTA -->
     <section id="shop" class="cta">
       <h2 class="sr-only">Shop the collection</h2>
       <p><a href="specials.html" class="btn">See Today’s Holiday Deals&nbsp;→</a></p>
@@ -78,6 +76,5 @@
   <footer class="site-footer">
     <p>&copy; 2025 Tipsy Elves &nbsp;|&nbsp; <a href="sitemap.xml">XML Sitemap</a></p>
   </footer>
-
 </body>
 </html>
