--- a/st-patricks-day.html
+++ b/st-patricks-day.html
@@ -1,4 +1,4 @@
-<!--  File: st‑patricks‑day.html  -->
+<!-- File: st-patricks-day.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,35 +16,34 @@
 
 <body>
   <header class="site-header">
-    <h1 class="logo"><a href="index.html">Tipsy Elves</a></h1>
+    <div class="logo"><a href="index.html">Tipsy Elves</a></div>
 
     <nav aria-label="Main">
       <ul class="nav">
-        <li><a href="ugly-christmas-sweaters.html">Ugly X‑mas</a></li>
+        <li><a href="ugly-christmas-sweaters.html">Ugly X-mas</a></li>
         <li><a href="halloween-costumes.html">Halloween</a></li>
         <li><a href="fourth-of-july.html">4th of July</a></li>
         <li><a href="st-patricks-day.html" class="active">St Patrick’s Day</a></li>
         <li><a href="custom-apparel.html">Custom Apparel</a></li>
-        
       </ul>
     </nav>
   </header>
 
   <main>
-    <!-- hero -------------------------------------------------------------->
+    <!-- hero -->
     <section class="hero">
       <img src="images/st_patricks_banner.jpg"
            alt="Friends cheering with green drinks while wearing funny St Patrick's Day outfits">
       <h2 class="hero-title">St Patrick’s Day Apparel</h2>
     </section>
 
-    <!-- Trending ---------------------------------------------------------->
+    <!-- Trending -->
     <section id="trending">
       <h2>Top Trending St Paddy’s Outfits</h2>
       <p>From lucky clover jumpsuits to pun‑filled tees (“Kiss Me, I’m Irish‑ish”), our green lineup guarantees you’ll out‑shine the parade floats. Dive into the latest drops or <a href="#shop">shop the full collection</a>.</p>
     </section>
 
-    <!-- Why we’re lucky --------------------------------------------------->
+    <!-- Why lucky -->
     <section id="standout" class="alt">
       <h2>Why Our Gear Strikes Gold</h2>
       <ul>
@@ -54,19 +53,19 @@
       </ul>
     </section>
 
-    <!-- Comfort & durability --------------------------------------------->
+    <!-- Comfort -->
     <section id="comfort">
       <h2>Comfort for All‑Day Shenanigans</h2>
       <p>Ultra‑soft cotton blends keep you cool during midday parades yet cozy when the evening breeze hits. Layer with pride and party on.</p>
     </section>
 
-    <!-- Crowd picks ------------------------------------------------------->
+    <!-- Favourites -->
     <section id="favourites" class="alt">
       <h2>Customer Favourites &amp; Lucky Charms</h2>
       <p>Fan‑fave “Shamrock Swagger Suit”, glitter “Pot o’ Gold” dress and matching “Mini Leprechaun” toddler set sell out fast. Check reviews for fit tips, then grab yours before the rainbow fades.</p>
     </section>
 
-    <!-- CTA --------------------------------------------------------------->
+    <!-- CTA -->
     <section id="shop" class="cta">
       <h2 class="sr-only">Shop the collection</h2>
       <p><a href="specials.html" class="btn">Grab St Paddy’s Deals&nbsp;→</a></p>
